<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:src="@drawable/ic_close_dialog"
        android:tint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_product"
        style="@style/InputAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:text="Paquete platanos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="@dimen/margin_150"
        android:layout_height="@dimen/margin_150"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_product" />

    <TextView
        android:id="@+id/text_quantity"
        style="@style/InputAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_product"
        app:layout_constraintStart_toStartOf="@+id/text_input_id"
        app:layout_constraintTop_toBottomOf="@+id/img_product" />

    <Spinner
        android:id="@+id/quantity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20"
        app:layout_constraintBottom_toBottomOf="@+id/text_quantity"
        app:layout_constraintStart_toEndOf="@+id/text_quantity"
        app:layout_constraintTop_toBottomOf="@+id/img_product"
        tools:ignore="RtlCompat" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_description"
        style="@style/InputForm"
        android:layout_width="@dimen/margin_300"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_quantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_description"
            style="@style/InputAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_description"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_edit"
        style="@style/InputAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:contentDescription="@string/app_name"
        android:text="@string/btn_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_description" />

    <ImageButton
        android:id="@+id/btn_edit"
        android:layout_width="@dimen/dimen_50"
        android:layout_height="@dimen/dimen_50"
        android:background="@color/greenPrimary"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>